objects/Manual_Reservation__c.object
<CustomObject>
    <description>Stores data from the Manual Reservation screen in CW.</description>
    <fields>
        <fullName>Auto_MIRV_Response__c</fullName>
        <label>Auto MIRV Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Delivery_Date__c</fullName>
        <label>Early Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Subject_Brand__c</fullName>
        <label>Email Subject Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RH</fullName>
                </value>
                <value>
                    <fullName>RH Baby &amp; Child</fullName>
                </value>
                <value>
                    <fullName>RH Contract</fullName>
                </value>
                <value>
                    <fullName>RH Teen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_To_Address__c</fullName>
        <label>Email To Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Date__c</fullName>
        <label>Late Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Lines__c</fullName>
        <label>Order Lines</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipLabel>Manual Reservations</relationshipLabel>
        <relationshipName>Manual_Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Ship_To__c</referenceTo>
        <relationshipLabel>Manual Reservations</relationshipLabel>
        <relationshipName>Manual_Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Manual Reservation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Manual Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>